[package]
name = "exfat-fuse"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.5.0"
env_logger = "0.11.3"
fuser = "0.14.0"
getopts = "0.2.21"
home = "0.5.9"
lazy_static = "1.4.0"
libc = "0.2.155"
log = "0.4.21"
nix = "0.29.0"
simplelog = "0.12.2"

libexfat = { git = "https://github.com/kusumi/libexfat" }

[features]
bitmap_u64 = ["libexfat/bitmap_u64"]
